--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
         <div class="grid contact-grid">
           <div class="contact-form-wrap">
-            <form id="contactForm" action="https://formspree.io/f/YOUR_FORM_ID" method="POST" novalidate>
+            <form id="contactForm" novalidate>
               <label for="name" data-i18n="formNameLabel">NÉV / CÉG NÉV</label>
               <input id="name" name="name" type="text" placeholder="Név" required data-i18n-placeholder="formNamePlaceholder">
 
