--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header class="header">
+<!-- HEADER -->
+<header class="header">
   <div class="container header-bar">
     <div class="header-nav">
       <a href="#hero" class="brand-link">
@@ -52,6 +52,11 @@
         </span>
         <span class="brand" data-i18n="brand">Eladó Telek</span>
       </a>
+
+      <button class="hamburger" aria-label="Menü megnyitása">
+        <span></span><span></span><span></span>
+      </button>
+
       <nav class="nav">
         <a href="#location" data-i18n="navLocation">Lokáció</a>
         <a href="#info" data-i18n="navInfo">Információ</a>
@@ -65,7 +70,7 @@
       <img src="assets/img/angol_nyelv.png" alt="English" class="flag" data-lang="en">
     </div>
   </div>
-  </header>
+</header>
 
   <main>
 
