--- a/index.html
+++ b/index.html
@@ -53,16 +53,19 @@
         <span class="brand" data-i18n="brand">Eladó Telek</span>
       </a>
 
-      <button class="hamburger" aria-label="Menü megnyitása">
-        <span></span><span></span><span></span>
-      </button>
-
       <nav class="nav">
         <a href="#location" data-i18n="navLocation">Lokáció</a>
         <a href="#info" data-i18n="navInfo">Információ</a>
         <a href="#docs" data-i18n="navDocs">Dokumentumok</a>
         <a href="#contact" data-i18n="navContact">Kapcsolat</a>
       </nav>
+
+      <button class="hamburger" aria-label="Menü megnyitása">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      
     </div>
     <div class="header-spacer"></div>
     <div class="header-lang">
