--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
             <div class="slides">
               <div class="slide active" data-index="0">
                 <div class="card">
-                  <div class="card-meta"><span data-i18n="cardMeta1">1. Raktár:</span> <span class="sqm">437 m²</span></div>
+                  <div class="card-meta"><span data-i18n="cardMeta1">1. Lakatosüzem:</span> <span class="sqm">471 m²</span></div>
                   <div class="card-img-wrap">
-                    <img class="card-img" src="assets/img/thumbs/1_epulet.png" data-full="assets/img/1_epulet.png" alt="Raktár" loading="lazy">
+                    <img class="card-img" src="assets/img/thumbs/1_epulet.png" data-full="assets/img/1_epulet.png" alt="Lakatosüzem" loading="lazy">
                     <span class="frame-icon" title="Nagyítás" tabindex="0">
                       <svg width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/><line x1="14" y1="3" x2="21" y2="3"/><line x1="21" y1="3" x2="21" y2="10"/><line x1="10" y1="21" x2="3" y2="21"/><line x1="3" y1="21" x2="3" y2="14"/></svg>
                     </span>
@@ -107,9 +107,9 @@
               </div>
               <div class="slide" data-index="1">
                 <div class="card">
-                  <div class="card-meta"><span data-i18n="cardMeta2">2. Épület:</span> <span class="sqm">Ismeretlen méret</span></div>
+                  <div class="card-meta"><span data-i18n="cardMeta2">2. Lakatosüzem:</span> <span class="sqm">378 m²</span></div>
                   <div class="card-img-wrap">
-                    <img class="card-img" src="assets/img/thumbs/2_epulet.png" data-full="assets/img/2_epulet.png" alt="Épület 2" loading="lazy">
+                    <img class="card-img" src="assets/img/thumbs/2_epulet.png" data-full="assets/img/2_epulet.png" alt="Lakatosüzem" loading="lazy">
                     <span class="frame-icon" title="Nagyítás" tabindex="0">
                       <svg width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/><line x1="14" y1="3" x2="21" y2="3"/><line x1="21" y1="3" x2="21" y2="10"/><line x1="10" y1="21" x2="3" y2="21"/><line x1="3" y1="21" x2="3" y2="14"/></svg>
                     </span>
@@ -119,9 +119,9 @@
               </div>
               <div class="slide" data-index="2">
                 <div class="card">
-                  <div class="card-meta"><span data-i18n="cardMeta3">3. Istálló:</span> <span class="sqm">76 m²</span></div>
+                  <div class="card-meta"><span data-i18n="cardMeta3">3. Lakatosüzem:</span> <span class="sqm">468 m²</span></div>
                   <div class="card-img-wrap">
-                    <img class="card-img" src="assets/img/thumbs/3_epulet.png" data-full="assets/img/3_epulet.png" alt="Istálló" loading="lazy">
+                    <img class="card-img" src="assets/img/thumbs/3_epulet.png" data-full="assets/img/3_epulet.png" alt="Lakatosüzem" loading="lazy">
                     <span class="frame-icon" title="Nagyítás" tabindex="0">
                       <svg width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/><line x1="14" y1="3" x2="21" y2="3"/><line x1="21" y1="3" x2="21" y2="10"/><line x1="10" y1="21" x2="3" y2="21"/><line x1="3" y1="21" x2="3" y2="14"/></svg>
                     </span>
@@ -131,7 +131,7 @@
               </div>
               <div class="slide" data-index="3">
                 <div class="card">
-                  <div class="card-meta"><span data-i18n="cardMeta4">4. Lakatosüzem:</span> <span class="sqm">471 m²</span></div>
+                  <div class="card-meta"><span data-i18n="cardMeta4">4. Lakatosüzem:</span> <span class="sqm">595 m²</span></div>
                   <div class="card-img-wrap">
                     <img class="card-img" src="assets/img/thumbs/4_epulet.png" data-full="assets/img/4_epulet.png" alt="Lakatosüzem 471 m²" loading="lazy">
                     <span class="frame-icon" title="Nagyítás" tabindex="0">
@@ -143,9 +143,9 @@
               </div>
               <div class="slide" data-index="4">
                 <div class="card">
-                  <div class="card-meta"><span data-i18n="cardMeta5">5. Lakatosüzem:</span> <span class="sqm">378 m²</span></div>
+                  <div class="card-meta"><span data-i18n="cardMeta5">5. Faipari üzemek és istálló:</span> <span class="sqm">235 m² + 260 m², 76 m²</span></div>
                   <div class="card-img-wrap">
-                    <img class="card-img" src="assets/img/thumbs/5_6_epulet.png" data-full="assets/img/5_6_epulet.png" alt="Lakatosüzem 378 m²" loading="lazy">
+                    <img class="card-img" src="assets/img/thumbs/5_6_epulet.png" data-full="assets/img/5_6_epulet.png" alt="Faipari üzemek 378 m²" loading="lazy">
                     <span class="frame-icon" title="Nagyítás" tabindex="0">
                       <svg width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/><line x1="14" y1="3" x2="21" y2="3"/><line x1="21" y1="3" x2="21" y2="10"/><line x1="10" y1="21" x2="3" y2="21"/><line x1="3" y1="21" x2="3" y2="14"/></svg>
                     </span>
@@ -155,9 +155,9 @@
               </div>
               <div class="slide" data-index="5">
                 <div class="card">
-                  <div class="card-meta"><span data-i18n="cardMeta6">6. Lakatosüzem:</span> <span class="sqm">595 m²</span></div>
+                  <div class="card-meta"><span data-i18n="cardMeta6">6. Mázsaház:</span> <span class="sqm">36 m²</span></div>
                   <div class="card-img-wrap">
-                    <img class="card-img" src="assets/img/thumbs/5_6_epulet.png" data-full="assets/img/5_6_epulet.png" alt="Lakatosüzem 595 m²" loading="lazy">
+                    <img class="card-img" src="assets/img/thumbs/7_epulet.png" data-full="assets/img/7_epulet.png" alt="Mázsaház" loading="lazy">
                     <span class="frame-icon" title="Nagyítás" tabindex="0">
                       <svg width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/><line x1="14" y1="3" x2="21" y2="3"/><line x1="21" y1="3" x2="21" y2="10"/><line x1="10" y1="21" x2="3" y2="21"/><line x1="3" y1="21" x2="3" y2="14"/></svg>
                     </span>
@@ -167,9 +167,9 @@
               </div>
               <div class="slide" data-index="6">
                 <div class="card">
-                  <div class="card-meta"><span data-i18n="cardMeta7">7. Lakatosüzem:</span> <span class="sqm">468 m²</span></div>
+                  <div class="card-meta"><span data-i18n="cardMeta7">7. Raktár:</span> <span class="sqm">437 m²</span></div>
                   <div class="card-img-wrap">
-                    <img class="card-img" src="assets/img/thumbs/7_epulet.png" data-full="assets/img/7_epulet.png" alt="Lakatosüzem 468 m²" loading="lazy">
+                    <img class="card-img" src="assets/img/thumbs/8_epulet.png" data-full="assets/img/8_epuet.png" alt="Raktár" loading="lazy">
                     <span class="frame-icon" title="Nagyítás" tabindex="0">
                       <svg width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/><line x1="14" y1="3" x2="21" y2="3"/><line x1="21" y1="3" x2="21" y2="10"/><line x1="10" y1="21" x2="3" y2="21"/><line x1="3" y1="21" x2="3" y2="14"/></svg>
                     </span>
@@ -179,9 +179,9 @@
               </div>
               <div class="slide" data-index="7">
                 <div class="card">
-                  <div class="card-meta"><span data-i18n="cardMeta8">8. Faipari üzem:</span> <span class="sqm">235 m²</span></div>
+                  <div class="card-meta"><span data-i18n="cardMeta8">8. Porta:</span> <span class="sqm">36 m²</span></div>
                   <div class="card-img-wrap">
-                    <img class="card-img" src="assets/img/thumbs/8_epulet.png" data-full="assets/img/8_epuet.png" alt="Faipari üzem 235 m²" loading="lazy">
+                    <img class="card-img" src="assets/img/thumbs/porta.png" data-full="assets/img/porta.png" alt="Porta" loading="lazy">
                     <span class="frame-icon" title="Nagyítás" tabindex="0">
                       <svg width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/><line x1="14" y1="3" x2="21" y2="3"/><line x1="21" y1="3" x2="21" y2="10"/><line x1="10" y1="21" x2="3" y2="21"/><line x1="3" y1="21" x2="3" y2="14"/></svg>
                     </span>
@@ -191,19 +191,7 @@
               </div>
               <div class="slide" data-index="8">
                 <div class="card">
-                  <div class="card-meta"><span data-i18n="cardMeta9">9. Faipari üzem:</span> <span class="sqm">260 m²</span></div>
-                  <div class="card-img-wrap">
-                    <img class="card-img" src="assets/img/thumbs/8_epulet.png" data-full="assets/img/8_epuet.png" alt="Faipari üzem 260 m²" loading="lazy">
-                    <span class="frame-icon" title="Nagyítás" tabindex="0">
-                      <svg width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/><line x1="14" y1="3" x2="21" y2="3"/><line x1="21" y1="3" x2="21" y2="10"/><line x1="10" y1="21" x2="3" y2="21"/><line x1="3" y1="21" x2="3" y2="14"/></svg>
-                    </span>
-                  </div>
-                  <div class="card-bottom"></div>
-                </div>
-              </div>
-              <div class="slide" data-index="9">
-                <div class="card">
-                  <div class="card-meta"><span data-i18n="cardMeta10">10. Kapu</span></div>
+                  <div class="card-meta"><span data-i18n="cardMeta9">9. Kapu</span></div>
                   <div class="card-img-wrap">
                     <img class="card-img" src="assets/img/thumbs/kapu.png" data-full="assets/img/kapu.png" alt="Kapu" loading="lazy">
                     <span class="frame-icon" title="Nagyítás" tabindex="0">
@@ -213,9 +201,9 @@
                   <div class="card-bottom"></div>
                 </div>
               </div>
-              <div class="slide" data-index="10">
+              <div class="slide" data-index="9">
                 <div class="card">
-                  <div class="card-meta"><span data-i18n="cardMeta11">11. Út</span></div>
+                  <div class="card-meta"><span data-i18n="cardMeta10">10. Út</span></div>
                   <div class="card-img-wrap">
                     <img class="card-img" src="assets/img/thumbs/ut.png" data-full="assets/img/ut.png" alt="Út" loading="lazy">
                     <span class="frame-icon" title="Nagyítás" tabindex="0">
@@ -244,21 +232,23 @@
     <!-- LOKÁCIÓ -->
   <section id="location" class="section section-grid">
     <div class="container">
-      <h2 class="section-title" data-i18n="locationTitle">Lokáció</h2>
-      <div class="grid">
-        <div>
-          <h3 data-i18n="locationSub">Stratégiai elhelyezkedés az ország szívében</h3>
-          <p class="justified location-text" data-i18n="locationDesc">...</p>
-          <p class="location-distances"><strong data-i18n="locationDistances">Főbb távolságok:</strong></p>
-          <div class="distance-list">
-            <div>📍 Paks – 30 km</div>
-            <div>📍 Dunaújváros – 20 km</div>
-            <div>📍 Budapest – 80 km</div>
+        <h2 class="section-title" data-i18n="locationTitle">Lokáció</h2>
+        <div class="grid">
+          <div class="location-map-col">
+            <div class="map-wrap">
+              <div id="gmap" style="width:100%;height:340px;border:1px solid #eee;border-radius:8px;"></div>
+            </div>
           </div>
-        </div>
-
-        <div class="map-wrap">
-          <div id="gmap" style="width:100%;height:340px;border:1px solid #eee;border-radius:8px;"></div>
+          <div class="location-info-col">
+            <h3 class="location-sub" data-i18n="locationSub">Stratégiai elhelyezkedés az ország szívében</h3>
+            <div class="location-text" data-i18n="locationDesc">Az ipari fejlesztési telek <strong>Fejér és Tolna megye határán</strong>, Daruszentmiklós külterületén helyezkedik el. Az <strong>M6-os autópálya</strong> felhajtója <strong>közvetlenül a telek mellett</strong> található, amely jelenleg egy belső salakos, mindössze 500m hosszú útról érhető el.</div>
+            <h4 class="location-distances-title" data-i18n="locationDistances">Főbb távolságok:</h4>
+            <div class="distance-list">
+              <div>📍 Paks – 30 km</div>
+              <div>📍 Dunaújváros – 20 km</div>
+              <div>📍 Budapest – 80 km</div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -489,9 +479,9 @@
               <span class="contact-icon" style="display:inline-block;vertical-align:middle;margin-right:8px;width:20px;height:20px;">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><rect x="3" y="5" width="18" height="14" rx="2" stroke-width="2" stroke="currentColor" fill="none"/><polyline points="3,7 12,13 21,7" stroke-width="2" stroke="currentColor" fill="none"/></svg>
               </span>
-              <a href="mailto:info@eladotelek.hu">info@dszm-site.com</a><br>
-              <img src="assets/img/magyar_telefon.png" alt="Hungarian Phone" class="contact-icon"> +36 30 123 4567<br>
-              <img src="assets/img/angol_magyar_telefon.png" alt="English/Hungarian Phone" class="contact-icon"> +36 70 555 1234
+              <a href="mailto:info@dszm-site.com">info@dszm-site.com</a><br>
+              <img src="assets/img/magyar_telefon.png" alt="Hungarian Phone" class="contact-icon"> +36 20 213 3128<br>
+              <img src="assets/img/angol_magyar_telefon.png" alt="English/Hungarian Phone" class="contact-icon"> +36 30 253 7016
             </p>
           </aside>
         </div>
@@ -515,6 +505,46 @@
   </footer>
 
   <script src="script.js"></script>
+  
+  <div id="cookies-banner-root"></div>
+  <script>
+    // Render and update cookies banner with i18n
+    function renderCookiesBanner(translations) {
+      var root = document.getElementById('cookies-banner-root');
+      if (!root) return;
+      if (localStorage.getItem('cookiesAccepted')) {
+        root.innerHTML = '';
+        return;
+      }
+      var html = `<div id="cookies-banner" style="position:fixed;bottom:0;left:0;width:100vw;z-index:3000;background:#000;color:#fff;padding:1.2rem 1rem;box-shadow:0 -2px 16px rgba(0,0,0,0.12);font-size:1.08rem;line-height:1.5;">
+        <div class="cookies-banner-inner" style="max-width:900px;margin:auto;display:flex;flex-direction:row;gap:1.2rem;align-items:center;justify-content:center;flex-wrap:wrap;">
+          <div class="cookies-banner-text" style="margin:0;">${translations.cookiesBannerText || ''}</div>
+          <button id="cookies-accept" style="background:#fff;color:#000;border:1px solid #000;padding:0.5rem 1.2rem;border-radius:22px;font-weight:700;transition:all .18s;cursor:pointer;">${translations.cookiesAcceptBtn || 'Accept'}</button>
+        </div>
+      </div>`;
+      root.innerHTML = html;
+      var btn = document.getElementById('cookies-accept');
+      if (btn) {
+        btn.addEventListener('mouseover', function() {
+          btn.style.background = '#000'; btn.style.color = '#fff';
+        });
+        btn.addEventListener('mouseout', function() {
+          btn.style.background = '#fff'; btn.style.color = '#000';
+        });
+        btn.addEventListener('click', function() {
+          localStorage.setItem('cookiesAccepted', '1');
+          document.getElementById('cookies-banner-root').innerHTML = '';
+        });
+      }
+    }
+    // Initial render after translations loaded
+    document.addEventListener('DOMContentLoaded', function() {
+      var lang = sessionStorage.getItem('lang') || 'hu';
+      fetch(`assets/lang/${lang}.json`).then(r => r.json()).then(translations => {
+        renderCookiesBanner(translations);
+      });
+    });
+  </script>
     <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCiPONTDlmxqqYhm-bWN4b6C2lc3U8-4To&callback=initMap&libraries=marker" async defer></script>
     <script>
       function initMap() {
@@ -609,6 +639,11 @@ async function loadLanguage(lang) {
         link.textContent = translations['formTermsLink'];
       }
     });
+
+    // Re-render cookies banner with new translations
+    if (typeof renderCookiesBanner === 'function') {
+      renderCookiesBanner(translations);
+    }
 
     const prev = document.getElementById('lang-error');
     if (prev) prev.remove();
