--- a/adatkezeles.html
+++ b/adatkezeles.html
@@ -11,7 +11,8 @@
   </style>
 </head>
 <body>
-  <h1>Adatkezelési tájékoztató</h1>
+  <h1>Adatkezelési tájékoztató/Privacy Policy</h1>
+  <p>English version of the Privacy Policy below</p>
   <p>Az oldal üzemeltetője magánszemélyként kezeli az űrlapon keresztül megadott adatokat.</p>
   <ul>
     <li><strong>Adatkezelő:</strong> az oldal üzemeltetője (magánszemély)</li>
@@ -21,7 +22,19 @@
     <li><strong>Adattovábbítás:</strong> nem történik</li>
     <li><strong>Jogalap:</strong> önkéntes hozzájárulás</li>
   </ul>
-  <p>Az érintett bármikor kérheti adatai törlését az <a href="mailto:info@eladotelek.hu">info@eladotelek.hu</a> címen.</p>
+  <p>Az érintett bármikor kérheti adatai törlését az <a href="mailto:info@dszm-site.com">info@dszm-site.com</a> címen.</p>
   <p><a href="index.html">Vissza a főoldalra</a></p>
+
+  <p>Operator of the site manages the data provided through the form as a private individual.</p>
+  <ul>
+    <li><strong>Data controller:</strong> operator of the site (private individual)</li>
+    <li><strong>Purpose of data management:</strong> contact and information</li>
+    <li><strong>Scope of managed data:</strong> name, email address, content of the message</li>
+    <li><strong>Retention period:</strong> up to 1 year or until the transaction is closed</li>
+    <li><strong>Data transfer:</strong> does not occur</li>
+    <li><strong>Legal basis:</strong> voluntary consent</li>
+  </ul>
+  <p>The data subject may request the deletion of his/her data at any time at <a href="mailto:info@dszm-site.com">info@dszm-site.com</a>.</p>
+  <p><a href="index.html">Back to homepage</a></p>
 </body>
 </html>
