--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
       </a>
       <div class="footer-right">
         <a href="adatkezeles.html" data-i18n="footerPrivacy">Adatkezelés</a>
-        <a href="#" data-i18n="footerCookies">Cookies</a>
+        <a href="cookies.html" data-i18n="footerCookies">Cookies</a>
       </div>
     </div>
   </footer>
