--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               </div>
               <div class="slide" data-index="4">
                 <div class="card">
-                  <div class="card-meta"><span data-i18n="cardMeta5">5. Faipari üzemek és istálló:</span> <span class="sqm">235 m² + 260 m², 76 m²</span></div>
+                  <div class="card-meta"><span data-i18n="cardMeta5">5. Faipari üzemek és istálló:</span> <span class="sqm">235 + 260 m², 76 m²</span></div>
                   <div class="card-img-wrap">
                     <img class="card-img" src="assets/img/thumbs/5_6_epulet.png" data-full="assets/img/5_6_epulet.png" alt="Faipari üzemek 378 m²" loading="lazy">
                     <span class="frame-icon" title="Nagyítás" tabindex="0">
@@ -169,7 +169,7 @@
                 <div class="card">
                   <div class="card-meta"><span data-i18n="cardMeta7">7. Raktár:</span> <span class="sqm">437 m²</span></div>
                   <div class="card-img-wrap">
-                    <img class="card-img" src="assets/img/thumbs/8_epulet.png" data-full="assets/img/8_epuet.png" alt="Raktár" loading="lazy">
+                    <img class="card-img" src="assets/img/thumbs/8_epulet.png" data-full="assets/img/8_epulet.png" alt="Raktár" loading="lazy">
                     <span class="frame-icon" title="Nagyítás" tabindex="0">
                       <svg width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/><line x1="14" y1="3" x2="21" y2="3"/><line x1="21" y1="3" x2="21" y2="10"/><line x1="10" y1="21" x2="3" y2="21"/><line x1="3" y1="21" x2="3" y2="14"/></svg>
                     </span>
@@ -244,8 +244,9 @@
             <div class="location-text" data-i18n="locationDesc">Az ipari fejlesztési telek <strong>Fejér és Tolna megye határán</strong>, Daruszentmiklós külterületén helyezkedik el. Az <strong>M6-os autópálya</strong> felhajtója <strong>közvetlenül a telek mellett</strong> található, amely jelenleg egy belső salakos, mindössze 500m hosszú útról érhető el.</div>
             <h4 class="location-distances-title" data-i18n="locationDistances">Főbb távolságok:</h4>
             <div class="distance-list">
-              <div>📍 Paks – 30 km</div>
+              <div>📍 Dunaföldvár – 8 km</div>
               <div>📍 Dunaújváros – 20 km</div>
+              <div>📍 Paks – 30 km</div>
               <div>📍 Budapest – 80 km</div>
             </div>
           </div>
@@ -385,7 +386,7 @@
         <li class="docs-row">
           <div class="doc-title" data-i18n="doc8">8. Településkép védelméről</div>
           <div class="doc-action">
-            <a href="assets/pdf/Telepuleskep_vedelme.pdf" target="_blank">
+            <a href="assets/pdf/Telepuleskep_vedelmerol.pdf" target="_blank">
               <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='currentColor'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z'/%3E%3C/svg%3E" alt="Megtekintés">
             </a>
         <a id="download-doc-8" href="assets/pdf/Telepuleskep_vedelmerol.pdf" download>
@@ -407,7 +408,7 @@
         <li class="docs-row">
           <div class="doc-title" data-i18n="doc10">10. Közművek: Földgázellátó hálózat</div>
           <div class="doc-action">
-            <a href="assets/pdf/Kozmu_gaz.pdf" target="_blank">
+            <a href="assets/pdf/kozmu_gaz.pdf" target="_blank">
               <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='currentColor'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z'/%3E%3C/svg%3E" alt="Megtekintés">
             </a>
         <a id="download-doc-10" href="assets/pdf/kozmu_gaz.pdf" download>
@@ -577,11 +578,22 @@
     
     <div class="modal-img-viewer hidden" id="modalImgViewer" tabindex="-1">
       <div class="modal-img-content">
-        <button class="modal-img-close" id="modalImgClose" aria-label="Bezárás">&times;</button>
-        <div id="modalImgLoader" class="modal-img-loader" style="display:none;">
-          <img src="assets/animations/wait_slower.gif" alt="Betöltés..." width="64" height="64" />
+        <!-- Loading wrapper shown while image downloads -->
+        <div class="modal-loading-wrap" aria-hidden="true">
+          <div class="modal-loading-box">
+            <img src="assets/animations/wait_slower.gif" alt="Betöltés...">
+          </div>
         </div>
-        <img src="" alt="Nagyított kép" id="modalImg" style="display:block;" />
+        <!-- Placeholder reserves space while image loads; image and nav buttons are positioned relative to modal content -->
+        <div class="modal-img-placeholder">
+          <button class="modal-nav-btn modal-nav-prev" id="modalNavPrev" aria-label="Előző kép">‹</button>
+          <button class="modal-nav-btn modal-nav-next" id="modalNavNext" aria-label="Következő kép">›</button>
+
+          <!-- Single close button inside the placeholder so it pins exactly like the nav arrows -->
+          <button class="modal-img-close" id="modalImgClose" aria-label="Bezárás">&times;</button>
+
+          <img src="" alt="Nagyított kép" id="modalImg" style="display:block;max-width:100%;max-height:100%;" />
+        </div>
       </div>
     </div>
     <link rel="preload" as="image" href="assets/animations/wait_slower.gif">
