--- a/adatkezeles.html
+++ b/adatkezeles.html
@@ -3,38 +3,68 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Adatkezelési tájékoztató</title>
+  <title>Adatkezelési tájékoztató / Privacy Policy</title>
   <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body { font-family:"Instrument Sans",sans-serif; max-width:800px; margin:auto; padding:2rem; line-height:1.6;}
-    h1 { margin-bottom:1rem; }
+    body {
+      font-family: "Instrument Sans", sans-serif;
+      max-width: 900px;
+      margin: auto;
+      padding: 2rem;
+      line-height: 1.6;
+      color: #222;
+    }
+    h1, h2 {
+      margin-top: 2rem;
+      font-weight: 600;
+    }
+    ul { margin-left: 1.5rem; }
+    a { color: #0066cc; }
+    hr { margin: 2rem 0; border: none; border-top: 1px solid #ddd; }
   </style>
 </head>
 <body>
-  <h1>Adatkezelési tájékoztató/Privacy Policy</h1>
-  <p>English version of the Privacy Policy below</p>
-  <p>Az oldal üzemeltetője magánszemélyként kezeli az űrlapon keresztül megadott adatokat.</p>
+  <h1>Adatkezelési tájékoztató / Privacy Policy</h1>
+  <p>English version below</p>
+
+  <h2>Magyar verzió</h2>
+  <p>Az oldal üzemeltetője magánszemélyként kezeli az űrlapon keresztül megadott személyes adatokat, az Európai Unió Általános Adatvédelmi Rendelete (GDPR – 2016/679/EU) előírásainak megfelelően.</p>
+
   <ul>
     <li><strong>Adatkezelő:</strong> az oldal üzemeltetője (magánszemély)</li>
-    <li><strong>Adatkezelés célja:</strong> kapcsolatfelvétel és információnyújtás</li>
+    <li><strong>Elérhetőség:</strong> <a href="mailto:info@dszm-site.com">info@dszm-site.com</a></li>
+    <li><strong>Adatkezelés célja:</strong> kapcsolatfelvétel és információnyújtás az érdeklődők részére</li>
     <li><strong>Kezelt adatok köre:</strong> név, e-mail cím, üzenet tartalma</li>
-    <li><strong>Megőrzés ideje:</strong> legfeljebb 1 évig, illetve az ügylet lezárultáig</li>
-    <li><strong>Adattovábbítás:</strong> nem történik</li>
-    <li><strong>Jogalap:</strong> önkéntes hozzájárulás</li>
+    <li><strong>Adatkezelés jogalapja:</strong> az érintett önkéntes hozzájárulása (GDPR 6. cikk (1) a))</li>
+    <li><strong>Megőrzés ideje:</strong> legfeljebb 1 évig, illetve az ügylet lezárultáig; az érintett kérésére adatai azonnal törlésre kerülnek</li>
+    <li><strong>Adattovábbítás:</strong> harmadik félnek nem történik, kivéve az adatfeldolgozást végző Amazon Web Services (AWS), amely az e-mail kommunikáció biztonságos továbbítását végzi</li>
+    <li><strong>Adatbiztonság:</strong> az adatok biztonságos, jelszóval védett elektronikus rendszerben kerülnek tárolásra, a kommunikáció titkosított (HTTPS, TLS) kapcsolaton keresztül történik</li>
+    <li><strong>Jogok:</strong> az érintett bármikor kérheti adataihoz való hozzáférést, helyesbítést vagy törlést az <a href="mailto:info@dszm-site.com">info@dszm-site.com</a> címen</li>
   </ul>
-  <p>Az érintett bármikor kérheti adatai törlését az <a href="mailto:info@dszm-site.com">info@dszm-site.com</a> címen.</p>
+
+  <p>A weboldal üzemeltetése és az automatikus válaszüzenetek küldése az <strong>Amazon Simple Email Service (AWS SES)</strong> infrastruktúráján keresztül történik, amely megfelel az <a href="https://aws.amazon.com/aup/" target="_blank">AWS Acceptable Use Policy</a> és az <a href="https://aws.amazon.com/serviceterms/" target="_blank">AWS Service Terms</a> előírásainak. Tömeges, kéretlen, vagy reklámcélú üzenetek nem kerülnek kiküldésre.</p>
+
   <p><a href="index.html">Vissza a főoldalra</a></p>
 
-  <p>Operator of the site manages the data provided through the form as a private individual.</p>
+  <hr>
+
+  <h2>English version</h2>
+  <p>The operator of this website manages the personal data submitted through the contact form as a private individual, in compliance with the EU General Data Protection Regulation (GDPR – Regulation 2016/679).</p>
+
   <ul>
-    <li><strong>Data controller:</strong> operator of the site (private individual)</li>
-    <li><strong>Purpose of data management:</strong> contact and information</li>
-    <li><strong>Scope of managed data:</strong> name, email address, content of the message</li>
-    <li><strong>Retention period:</strong> up to 1 year or until the transaction is closed</li>
-    <li><strong>Data transfer:</strong> does not occur</li>
-    <li><strong>Legal basis:</strong> voluntary consent</li>
+    <li><strong>Data Controller:</strong> operator of the website (private individual)</li>
+    <li><strong>Contact:</strong> <a href="mailto:info@dszm-site.com">info@dszm-site.com</a></li>
+    <li><strong>Purpose of processing:</strong> to establish contact and provide information to interested parties</li>
+    <li><strong>Data processed:</strong> name, email address, message content</li>
+    <li><strong>Legal basis:</strong> voluntary consent of the data subject (Article 6 (1)(a) of the GDPR)</li>
+    <li><strong>Retention period:</strong> up to 1 year or until the transaction is completed; data can be deleted immediately upon request</li>
+    <li><strong>Data sharing:</strong> no transfer to third parties, except for processing via Amazon Web Services (AWS) for secure email delivery</li>
+    <li><strong>Data security:</strong> all data is stored securely in password-protected systems and transmitted over encrypted (HTTPS, TLS) connections</li>
+    <li><strong>Rights:</strong> you may request access, correction, or deletion of your data at any time by emailing <a href="mailto:info@dszm-site.com">info@dszm-site.com</a></li>
   </ul>
-  <p>The data subject may request the deletion of his/her data at any time at <a href="mailto:info@dszm-site.com">info@dszm-site.com</a>.</p>
+
+  <p>The website uses <strong>Amazon Simple Email Service (AWS SES)</strong> solely for legitimate transactional communication, in accordance with the <a href="https://aws.amazon.com/aup/" target="_blank">AWS Acceptable Use Policy</a> and <a href="https://aws.amazon.com/serviceterms/" target="_blank">AWS Service Terms</a>. No unsolicited or marketing emails are sent.</p>
+
   <p><a href="index.html">Back to homepage</a></p>
 </body>
 </html>
